--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Joran DW | Home</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <link href="./assets/LOGO.png?" rel="shortcut icon" />
+        <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
         <link href="css/index.css" rel="stylesheet" />
         <script src="javascript/index.js"></script>
