Added discord and instagram social button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                         ><i class="fab fa-twitter"></i
                     ></a>
                     <a
+                        href="https://www.instagram.com/dwjoran/"
+                        class="social-button instagram"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a
                         href="https://www.twitch.tv/TheSnowMeny"
                         class="social-button twitch"
                         ><i class="fab fa-twitch"></i
@@ -58,6 +63,11 @@
                         href="https://open.spotify.com/user/joran.de.wannemacker?si=44125f8b85a440ba"
                         class="social-button spotify"
                         ><i class="fab fa-spotify"></i
+                    ></a>
+                    <a
+                        href="https://discord.gg/BuNcQFRdPa"
+                        class="social-button discord"
+                        ><i class="fab fa-discord"></i
                     ></a>
                     <a
                         href="https://www.tiktok.com/@thesnowmeny"
