--- a/twitch.html
+++ b/twitch.html
@@ -14,6 +14,10 @@
     <body>
         <main>
             <iframe src="https://player.twitch.tv/?channel=thesnowmeny&parent=www.jorandw.nl" frameborder="0" allowfullscreen="true" scrolling="no" height="450" width="750"></iframe>
+            <iframe src="https://www.twitch.tv/embed/thesnowmeny/chat?parent=www.jorandw.nl"
+                height=450
+                width=auto>
+        </iframe>
         </main>
     </body>
 </html>
