Added homepage button

--- a/twitch.html
+++ b/twitch.html
@@ -13,9 +13,15 @@
     </head>
     <body>
         <main>
-            <iframe src="https://player.twitch.tv/?channel=thesnowmeny&parent=www.jorandw.nl" frameborder="0" allowfullscreen="true" scrolling="no" height="450" width="750"></iframe>
+            <article class="top-left">
+                <div class="social-buttons"></div>
+                <a href="index.html" class="social-button house"
+                    ><i class="fa-solid fa-house"></i>
+                </a>
+            </article>
+            <iframe src="https://player.twitch.tv/?channel=thesnowmeny&parent=www.jorandw.nl" frameborder="0" allowfullscreen="true" scrolling="no" height="500" width="940"></iframe>
             <iframe src="https://www.twitch.tv/embed/thesnowmeny/chat?parent=www.jorandw.nl"
-                height=450
+                height=500
                 width=auto>
         </iframe>
         </main>
