changed twitch link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         ><i class="fab fa-instagram"></i
                     ></a>
                     <a
-                        href="https://www.twitch.tv/TheSnowMeny"
+                        href="https://www.jorandw.nl/twitch.html"
                         class="social-button twitch"
                         ><i class="fab fa-twitch"></i
                     ></a>
