--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main>
             <article class="card-container">
                 <img
-                    src="assets/joran.png"
+                    src="assets/LOGO.png"
                     alt="joran-picture"
                     class="rounded centered person-picture w6"
                 />
@@ -44,7 +44,7 @@
                         ><i class="fab fa-twitter"></i
                     ></a>
                     <a
-                        href="https://www.instagram.com/dwjoran/"
+                        href="https://www.instagram.com/TheSnowMeny/"
                         class="social-button instagram"
                         ><i class="fab fa-instagram"></i
                     ></a>
