--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img
                     src="assets/LOGO.png"
                     alt="joran-picture"
-                    class="rounded centered person-picture w6"
+                    class="rounded centered person-picture w4"
                 />
                 <div class="text-align-center w12">
                     <p class="big-font">Schipahoj piraat!</p>
@@ -43,11 +43,11 @@
                         class="social-button twitter"
                         ><i class="fab fa-twitter"></i
                     ></a>
-                    <a
-                        href="https://www.instagram.com/TheSnowMeny/"
+                    <!-- <a
+                        href="https://www.instagram.com/jorandw/"
                         class="social-button instagram"
                         ><i class="fab fa-instagram"></i
-                    ></a>
+                    ></a> -->
                     <a
                         href="https://www.jorandw.nl/twitch.html"
                         class="social-button twitch"
@@ -60,11 +60,11 @@
                     ></a>
                 </div>
                 <div class="social-buttons">
-                    <a
+                    <!-- <a
                         href="https://open.spotify.com/user/joran.de.wannemacker?si=44125f8b85a440ba"
                         class="social-button spotify"
                         ><i class="fab fa-spotify"></i
-                    ></a>
+                    ></a> -->
                     <a
                         href="https://discord.gg/BuNcQFRdPa"
                         class="social-button discord"
