--- a/twitch.html
+++ b/twitch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-        <title>Joran DW | Home</title>
+        <title>Joran | Home</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
