Added meta tags

--- a/twitch.html
+++ b/twitch.html
@@ -5,6 +5,11 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
+        <meta name="theme-color" content="#f5f5dc">
+        <meta name="og:url" content="https://jorandw.nl/twitch">
+        <meta name="og:title" content="Joran | Home">
+        <meta name="description" content="Via hier kun je dus ook mijn stream kijken? Waarom? Omdat het kan.">
+        <meta name="og:description" content="Via hier kun je dus ook mijn stream kijken? Waarom? Omdat het kan.">
         <script
             src="https://kit.fontawesome.com/c2e4631732.js"
             crossorigin="anonymous"
