--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
+        <meta name="theme-color" content="#f5f5dc">
+        <meta name="og:url" content="https://jorandw.nl">
+        <meta name="og:title" content="Joran | Home">
+        <meta name="description" content="Dit is de super koele officiele website van Joran. Ik ben een loser.">
+        <meta name="og:description" content="Dit is de super koele officiele website van Joran. Ik ben een loser.">
+        
+
         <link href="css/index.css" rel="stylesheet" />
         <script
             src="https://kit.fontawesome.com/c2e4631732.js"
