--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
-        <meta name="theme-color" content="#f5f5dc">
-        <meta name="og:url" content="https://jorandw.nl">
-        <meta name="og:title" content="Joran | Home">
-        <meta name="description" content="Dit is de super koele officiele website van Joran. Ik ben een loser.">
-        <meta name="og:description" content="Dit is de super koele officiele website van Joran. Ik ben een loser.">
+        <meta name="theme-color" content="#f5f5dc" />
+        <meta name="og:url" content="https://jorandw.nl" />
+        <meta name="og:title" content="Joran | Home" />
+        <meta
+            name="description"
+            content="Dit is de super koele officiele website van Joran. Ik ben een loser."
+        />
+        <meta
+            name="og:description"
+            content="Dit is de super koele officiele website van Joran. Ik ben een loser."
+        />
         <link href="css/index.css" rel="stylesheet" />
         <script
             src="https://kit.fontawesome.com/c2e4631732.js"
             crossorigin="anonymous"
         ></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3160160568130422"
-     crossorigin="anonymous"></script>
+        <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3160160568130422"
+            crossorigin="anonymous"
+        ></script>
         <link href="css/generalstyle.css" rel="stylesheet" />
+        <link href="css/socialbuttons.css" rel="stylesheet" />
     </head>
     <body>
         <main>
@@ -48,44 +58,8 @@
                         class="social-button twitter"
                         ><i class="fab fa-twitter"></i
                     ></a>
-                    <!-- <a
-                        href="https://www.instagram.com/jorandw/"
-                        class="social-button instagram"
-                        ><i class="fab fa-instagram"></i
-                    ></a> -->
-                    <a
-                        href="https://www.jorandw.nl/twitch.html"
-                        class="social-button twitch"
-                        ><i class="fab fa-twitch"></i
-                    ></a>
-                    <a
-                        href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"
-                        class="social-button youtube"
-                        ><i class="fab fa-youtube"></i
-                    ></a>
-                </div>
-                <div class="social-buttons">
-                    <!-- <a
-                        href="https://open.spotify.com/user/joran.de.wannemacker?si=44125f8b85a440ba"
-                        class="social-button spotify"
-                        ><i class="fab fa-spotify"></i
-                    ></a> -->
-                    <a
-                        href="https://discord.gg/BuNcQFRdPa"
-                        class="social-button discord"
-                        ><i class="fab fa-discord"></i
-                    ></a>
-                    <a
-                        href="https://www.tiktok.com/@thesnowmeny"
-                        class="social-button tiktok"
-                        ><i class="fa-brands fa-tiktok"></i
-                    ></a>
-                </div>
-                <div class="social-buttons">
-                    <a
-                        href="mailto:jorandw.info@gmail.com"
-                        class="social-button email"
-                        ><i class="fa-regular fa-envelope"></i
+                    <a href="socials.html" class="social-button socials"
+                        ><i class="fa-solid fa-hashtag"></i
                     ></a>
                 </div>
             </article>
