--- a/socials.html
+++ b/socials.html
@@ -35,7 +35,7 @@
                         ><i class="fab fa-twitter"></i
                     ></a>
                     <a
-                        href="https://www.instagram.com/jorandw/"
+                        href="https://www.instagram.com/dwjoran/"
                         class="social-button instagram"
                         ><i class="fab fa-instagram"></i
                     ></a>
