--- a/socials.html
+++ b/socials.html
@@ -61,6 +61,14 @@
                         class="social-button tiktok"
                         ><i class="fa-brands fa-tiktok"></i
                     ></a>
+                    <a
+                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                        class="social-button onlyfans"
+                        ><img
+                        src="assets/of.png"
+                        alt="of"
+                        class=""
+                    /></a>
                 </div>
                 <div class="social-buttons">
                     <a
