--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                     ></a>
                 </div>
             </article>
+            <footer>
+                <p>
+                    &copy; Joran DW <span id="year"></span> | Design by
+                    <a href="https://www.driesbielen.be">Dries Bielen</a>
+                </p>
+            </footer>
         </main>
     </body>
 </html>
