--- a/twitch.html
+++ b/twitch.html
@@ -32,5 +32,11 @@
                 width=auto>
         </iframe>
         </main>
+        <footer>
+            <p>
+                &copy; Joran DW <span id="year"></span> | Design by
+                <a href="https://www.driesbielen.be">Dries Bielen</a>
+            </p>
+        </footer>
     </body>
 </html>
