--- a/socials.html
+++ b/socials.html
@@ -78,6 +78,12 @@
                     ></a>
                 </div>
             </article>
+            <footer>
+                <p>
+                    &copy; Joran DW <span id="year"></span> | Design by
+                    <a href="https://www.driesbielen.be">Dries Bielen</a>
+                </p>
+            </footer>
         </main>
     </body>
 </html>
