--- a/twitch.html
+++ b/twitch.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-        <title>Joran | Home</title>
+        <title>Joran | Twitch</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <link href="./assets/LOGO.png" rel="shortcut icon" />
         <meta charset="utf-8" />
         <meta name="theme-color" content="#f5f5dc">
         <meta name="og:url" content="https://jorandw.nl/twitch">
-        <meta name="og:title" content="Joran | Home">
+        <meta name="og:title" content="Joran | Twitch">
         <meta name="description" content="Via hier kun je dus ook mijn stream kijken? Waarom? Omdat het kan.">
         <meta name="og:description" content="Via hier kun je dus ook mijn stream kijken? Waarom? Omdat het kan.">
         <script
