changed index text

--- a/index.html
+++ b/index.html
@@ -38,18 +38,32 @@
                     class="rounded centered person-picture w5"
                 />
                 <div class="text-align-center w12">
-                    <p class="big-font">Schipahoj piraat!</p>
+                    <p class="big-font">Schipahoj piraatjes!</p>
                 </div>
                 <div class="text-align-center w12">
                     <p class="big-font">
-                        Mijn naam is Joran , ik ben nog best jong maar dat houd
-                        me niet tegen om te streamen!
+                        Mijn naam is Joran, ook bekend als TheSnowMeny. (Top
+                        shit)
                     </p>
                 </div>
                 <div class="text-align-center w12">
                     <p class="big-font">
-                        Ik ben in mijn vrije tijd bezig met streamen , editen en
-                        soms Youtube video's!
+                        Ik stream regelmatig op twitch en maak er af en toe eens
+                        een leuke YouTube video van!
+                    </p>
+                </div>
+                <div class="text-align-center w12">
+                    <p class="big-font">
+                        In het dagelijkse leven ben ik een (voorbeeldige)
+                        student, een echte levensgenieter (ik zit 24/7 niks te
+                        doen) en ik speel op een relatief hoog niveau voetbal
+                        als doelman van KFC Varsenare.
+                    </p>
+                </div>
+                <div class="text-align-center w12">
+                    <p class="big-font">
+                        Ik werk momenteel aan projecten die in de toekomst
+                        beschikbaar zal zijn voor de mensheid (zeer formeel)
                     </p>
                 </div>
                 <div class="social-buttons">
