updated twitch link

--- a/socials.html
+++ b/socials.html
@@ -40,7 +40,7 @@
                         ><i class="fab fa-instagram"></i
                     ></a>
                     <a
-                        href="https://www.jorandw.nl/twitch.html"
+                        href="https://www.twitch.tv/thesnowmeny"
                         class="social-button twitch"
                         ><i class="fab fa-twitch"></i
                     ></a>
