--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img
                     src="assets/joran.png"
                     alt="joran-picture"
-                    class="rounded centered person-picture w5"
+                    class="rounded centered person-picture"
                 />
                 <div class="text-align-center w12">
                     <p class="big-font">Schipahoj piraatjes!</p>
