Zieke upgrade weeje

--- a/index.html
+++ b/index.html
@@ -1,83 +1,272 @@
 <!DOCTYPE html>
-<html lang="nl">
-    <head>
-        <title>Joran | Home</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <link href="./assets/LOGO.png" rel="shortcut icon" />
-        <meta charset="utf-8" />
-        <meta name="theme-color" content="#f5f5dc" />
-        <meta name="og:url" content="https://jorandw.nl" />
-        <meta name="og:title" content="Joran | Home" />
-        <meta
-            name="description"
-            content="Dit is de super koele officiele website van Joran. Ik ben een loser."
-        />
-        <meta
-            name="og:description"
-            content="Dit is de super koele officiele website van Joran. Ik ben een loser."
-        />
-        <link href="css/index.css" rel="stylesheet" />
-        <script
-            src="https://kit.fontawesome.com/c2e4631732.js"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            async
-            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3160160568130422"
-            crossorigin="anonymous"
-        ></script>
-        <link href="css/generalstyle.css" rel="stylesheet" />
-        <link href="css/socialbuttons.css" rel="stylesheet" />
-    </head>
-    <body>
-        <main>
-            <article class="card-container">
-                <img
-                    src="assets/joran.png"
-                    alt="joran-picture"
-                    class="rounded centered person-picture"
-                />
-                <div class="text-align-center w12">
-                    <p class="big-font">Schipahoj piraatjes!</p>
-                </div>
-                <div class="text-align-center w12">
-                    <p class="big-font">
-                        Mijn naam is Joran, ook bekend als TheSnowMeny. (Top
-                        shit)
-                    </p>
-                </div>
-                <div class="text-align-center w12">
-                    <p class="big-font">
-                        Ik stream regelmatig op twitch en maak er af en toe eens
-                        een leuke YouTube video van!
-                    </p>
-                </div>
-                <div class="text-align-center w12">
-                    <p class="big-font">
-                        In het dagelijkse leven ben ik een (voorbeeldige)
-                        student, een echte levensgenieter (ik zit 24/7 niks te
-                        doen) en ik speel op een relatief hoog niveau voetbal
-                        als doelman van KFC Varsenare.
-                    </p>
-                </div>
-                <div class="text-align-center w12">
-                    <p class="big-font">
-                        Ik werk momenteel aan projecten die in de toekomst
-                        beschikbaar zal zijn voor de mensheid (zeer formeel)
-                    </p>
-                </div>
-                <div class="social-buttons">
-                    <a href="socials.html" class="social-button socials"
-                        ><i class="fa-solid fa-hashtag"></i
-                    ></a>
-                </div>
-            </article>
-            <footer>
-                <p>
-                    &copy; Joran DW <span id="year"></span> | Design by
-                    <a href="https://www.driesbielen.be">Dries Bielen</a>
-                </p>
-            </footer>
-        </main>
-    </body>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>JoranDW</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <link href="assets/img/koe.gif" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <script src="https://kit.fontawesome.com/c2e4631732.js" crossorigin="anonymous"></script>
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+</head>
+
+
+
+<body>
+
+
+
+  <header id="header" class="fixed-top ">
+    <div class="container-fluid">
+
+      <div class="row justify-content-center">
+        <div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
+          <h1 class="logo me-auto me-lg-0"><a href="index.html">Joran DW</a></h1>
+
+          <nav id="navbar" class="navbar order-last order-lg-0">
+            <ul>
+              <li><a class="nav-link scrollto active" href="#hero">Homo</a></li>
+              <li><a class="nav-link scrollto" href="#about">Over Mij</a></li>
+              <li><a class="nav-link scrollto" href="#pricing">Prijs</a></li>
+              <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            </ul>
+          </nav>
+          <a href="https://www.twitch.tv/thesnowmeny" class="get-started-btn scrollto">Twitch</a>
+        </div>
+      </div>
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero" class="d-flex flex-column justify-content-center">
+    <div class="background">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+   </div>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-xl-8">
+          <h1>Joran</h1>
+          <h2>TheSnowMeny</h2>
+          <a href="https://twitch.tv/thesnowmeny" class="glightbox play-btn mb-4"></a>
+        </div>
+      </div>
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+
+    <!-- ======= About Us Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Over mij</h2>
+          <p>Mijn naar is Joran, ook wel .</p>
+        </div>
+
+
+      </div>
+    </section><!-- End About Us Section -->
+
+
+    <!-- ======= Counts Section ======= -->
+    <section id="counts" class="counts">
+      <div class="container">
+
+        <div class="row counters position-relative">
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Uren gestreamed</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Vriendinnen gehad</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="420" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Overplay aanpassingen</p>
+          </div>
+
+          <div class="col-lg-3 col-6 text-center">
+            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Hard Werkers:</p>
+            <p>Dries</p>
+            <p>Jo Ran</p>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Counts Section -->
+
+
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-lg-2 col-md-6"></div>
+
+          <div class="col-lg-4 col-md-6">
+            <div class="box">
+              <h3>Follower</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
+              <ul>
+                <li>Discord toegang</li>
+                <li class="na">Twitch emotes</li>
+                <li class="na">Sub badge</li>
+                <li class="na">Discord rol</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="https://twitch.tv/thesnowmeny" class="btn-buy">Gratis weeje</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
+            <div class="box recommended">
+              <span class="recommended-badge">Recommended</span>
+              <h3>Business</h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Discord toegang</li>
+                <li>Twitch emotes</li>
+                <li>Sub badge</li>
+                <li>Discord rol</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="https://www.twitch.tv/thesnowmeny" class="btn-buy">Doe keer kope</a>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Contact</h2>
+          <p>Laat mij anders met rust?</p>
+        </div>
+      </div>
+
+      <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3863060.5258176434!2d26.506597243873045!3d-18.99679258901422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1931a4e706b17161%3A0xa1c0385fc5cbbfee!2sZimbabwe!5e0!3m2!1snl!2sbe!4v1712603208561!5m2!1snl!2sbe" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+
+      <div class="container">
+
+        <div class="row mt-5">
+
+          <div class="col-lg-12">
+            <div class="info">
+              <div class="address">
+                <i class="ri-map-pin-line"></i>
+                <h4>Location:</h4>
+                <p>Zimbabweeje</p>
+              </div>
+
+              <div class="email">
+                <i class="ri-mail-line"></i>
+                <h4>Email:</h4>
+                <p>jorandw.info@gmail.com</p>
+              </div>
+
+              <div class="phone">
+                <i class="ri-phone-line"></i>
+                <h4>Call:</h4>
+                <p>015666666</p>
+              </div>
+
+            </div>
+
+          </div>
+
+
+        </div>
+
+      </div>
+    </section><!-- End Contact Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+      <div class="social-links">
+        <a href="https://twitter.com/TheSnowMeny" ><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://discord.gg/ZCy4nzQm8z" ><i class="fa-brands fa-discord"></i></a>
+        <a href="https://www.tiktok.com/@thesnowmeny" ><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/" ><i class="fa-brands fa-square-instagram"></i></a>
+      </div>
+      <div class="credits">
+        Designed by <a href="https://driesbielen.com/">Dries Bielen</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
