--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
   <footer id="footer">
       <div class="social-links">
         <a href="https://twitter.com/TheSnowMeny" ><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"><i class="fa-brands fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://discord.gg/ZCy4nzQm8z" ><i class="fa-brands fa-discord"></i></a>
         <a href="https://www.tiktok.com/@thesnowmeny" ><i class="fa-brands fa-tiktok"></i></a>
         <a href="https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/" ><i class="fa-brands fa-square-instagram"></i></a>
       </div>
       <div class="credits">
-        Designed by <a href="https://driesbielen.com/">Dries Bielen</a>
+        Designed by <a href="https://driesbielen.be/">Dries Bielen</a>
       </div>
     </div>
   </footer><!-- End Footer -->
