--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <link href="assets/img/koe.gif" rel="icon">
+  <link href="assets/img/Favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <script src="https://kit.fontawesome.com/c2e4631732.js" crossorigin="anonymous"></script>
@@ -79,7 +81,7 @@
       <span></span>
       <span></span>
       <span></span>
-   </div>
+    </div>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8">
@@ -99,7 +101,22 @@
 
         <div class="section-title">
           <h2>Over mij</h2>
-          <p>Mijn naar is Joran, ook wel .</p>
+          <p>Fakka niffo!
+
+            Ik ben Joran , ook wel bekend als TheSnowMeny!
+
+            Ik stream op Twitch en maak af en toe een Youtube video!
+
+            Leuke momenten zijn dan weer op tiktok te zien hiervan. Naast deze leuke taferelen studeer ik gewoon nog en
+            speel ik voetbal.
+
+            Ik beheers photoshop, editing & een grote lul.
+
+            Ik ben leider van de TC (Toxic Club) samen met Dries. Ook leid ik 'Stichting de Kleine loser'.
+
+            Ik ben eigelijk gewoon 1 grote meme. Ik ben zeer sarcastisch en dat is oke.
+
+            Geniet van mij dingen maar kom wel niet klaar! </p>
         </div>
 
 
@@ -114,22 +131,26 @@
         <div class="row counters position-relative">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="250" data-purecounter-duration="1"
+              class="purecounter"></span>
             <p>Uren gestreamed</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1"
+              class="purecounter"></span>
             <p>Vriendinnen gehad</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="420" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="420" data-purecounter-duration="1"
+              class="purecounter"></span>
             <p>Overplay aanpassingen</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1"
+              class="purecounter"></span>
             <p>Hard Werkers:</p>
             <p>Dries</p>
             <p>Jo Ran</p>
@@ -153,7 +174,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="box">
               <h3>Follower</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h4><sup>€</sup>0<span> / month</span></h4>
               <ul>
                 <li>Discord toegang</li>
                 <li class="na">Twitch emotes</li>
@@ -169,8 +190,8 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended">
               <span class="recommended-badge">Recommended</span>
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>Subscriber</h3>
+              <h4><sup>€</sup>3.99<span> / month</span></h4>
               <ul>
                 <li>Discord toegang</li>
                 <li>Twitch emotes</li>
@@ -200,7 +221,10 @@
       </div>
 
       <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3863060.5258176434!2d26.506597243873045!3d-18.99679258901422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1931a4e706b17161%3A0xa1c0385fc5cbbfee!2sZimbabwe!5e0!3m2!1snl!2sbe!4v1712603208561!5m2!1snl!2sbe" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3863060.5258176434!2d26.506597243873045!3d-18.99679258901422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1931a4e706b17161%3A0xa1c0385fc5cbbfee!2sZimbabwe!5e0!3m2!1snl!2sbe!4v1712603208561!5m2!1snl!2sbe"
+          width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <div class="container">
@@ -241,20 +265,24 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-      <div class="social-links">
-        <a href="https://twitter.com/TheSnowMeny" ><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://discord.gg/ZCy4nzQm8z" ><i class="fa-brands fa-discord"></i></a>
-        <a href="https://www.tiktok.com/@thesnowmeny" ><i class="fa-brands fa-tiktok"></i></a>
-        <a href="https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/" ><i class="fa-brands fa-square-instagram"></i></a>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://driesbielen.be/">Dries Bielen</a>
-      </div>
+    <div class="social-links">
+      <a href="https://youtu.be/irwPWhOE0n4"><i class="fa-solid fa-fan"></i></a>
+      <a href="https://twitter.com/TheSnowMeny"><i class="fa-brands fa-x-twitter"></i></a>
+      <a href="https://www.youtube.com/channel/UCOjCP7ofD-QulsdH1a1pwLQ"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://discord.gg/ZCy4nzQm8z"><i class="fa-brands fa-discord"></i></a>
+      <a href="https://www.tiktok.com/@thesnowmeny"><i class="fa-brands fa-tiktok"></i></a>
+      <a
+        href="https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/https://www.instagram.com/tisjoran/"><i
+          class="fa-brands fa-square-instagram"></i></a>
+    </div>
+    <div class="credits">
+      Designed by <a href="https://driesbielen.be/">Dries Bielen</a>
+    </div>
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
