--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <!-- CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XR0RXE8WKX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XR0RXE8WKX');
+  </script>
+
 </head>
 
 
