--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="col-lg-3 col-6 text-center">
             <span data-purecounter-start="0" data-purecounter-end="420" data-purecounter-duration="1"
               class="purecounter"></span>
-            <p>Overplay aanpassingen</p>
+            <p>Overlay aanpassingen</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
@@ -304,6 +304,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/test.js"></script>
 
 </body>
 
